# fxp-falcon-py

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: codeql-analysis.yml  tests.yml
experiments/: README.md  _outputs.py  _path_setup.py  _precision_ref.py  bench_div_precision.py  bench_ffldl_precision.py  bench_ffldl_realcond.py  bench_ffsampling_precision.py  bench_fft_precision.py  bench_pipeline_precision.py  sign_fxp_end_to_end.py  sign_tweak_kat_fxp.py  simulate_ntrugen.py  test_ffsampling_fxp.py  test_keygen_fxp.py  test_samplerz_fxp.py
experiments/figures/latex/: README.md  _template_hist.tex  _template_loglog.tex  div_precision.tex  ffldl_precision.tex  ffsampling_precision_selfconsistent_n512.tex  fft_precision.tex
falcon_ref/: falcon.py  ntrugen.py  ntrugen_filters.py  samplerz.py  test.py
fxp/: README.md  _path_setup.py  ffldl_fxp.py  ffsampling_fxp.py  fft_fxp.py  fxp_constants_p127.py  fxp_constants_p63.py  fxtypes.py  m_budgets.py  nr_fxp.py  samplerz_fxp.py  sign_tweak.py  target_construction.py
scripts/: README.md  callgraph_fxp.py  derive_m_budgets.py  generate_constants_fxp.sage  generate_constants_fxp.sage.py  generate_rcdt.py
tests/: check_test_vectors.py  gen_test_vectors.py  smoke_test_e2e.py  test_constants_precision.py  test_fxtypes.py  test_keygen_bounds.py  test_m_budgets_derivation.py  test_modulus.py  test_nr_fxp.py  test_samplerz_fxp.py
tests/test_vectors/: fft.json  ldl.json  poly.json
